fix login page to new page

--- a/modules/server/src/main/resources/templates/login.html
+++ b/modules/server/src/main/resources/templates/login.html
@@ -150,7 +150,7 @@
     // 跳转到新版本
     function tryVueLogin() {
         layer.msg('loading...');
-        window.location.href = '/welcome';
+        window.location.href = './welcome';
     }
 
     function showCode() {
