add fast to new page link

--- a/modules/server/src/main/resources/templates/index.html
+++ b/modules/server/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <div class="layui-header">
         <div class="layui-logo" th:title="'版本时间:'+${jpomManifest.timeStamp}+'，进程ID:'+${jpomManifest.pid}">
             Jpom项目管理系统<span style="font-size: 10px;" th:text="'('+${jpomManifest.version}+')'"></span>
-            <a style="font-size: 18px;color: #009688;" href="./welcome">&nbsp;&nbsp;&nbsp;&nbsp;<i class=" layui-icon layui-icon-release"></i>&nbsp;新版本</a>
+            <a style="font-size: 18px;color: #009688;" href="./welcome">&nbsp;&nbsp;&nbsp;&nbsp;<i class=" layui-icon layui-icon-release"></i>&nbsp;体验新版本</a>
         </div>
 
         <ul class="layui-nav layui-layout-left">
