旧版本登录

--- a/modules/server/src/main/resources/templates/login.html
+++ b/modules/server/src/main/resources/templates/login.html
@@ -129,7 +129,7 @@
                             if (url && url.indexOf("index") > -1) {
                                 window.location.href = decodeURIComponent(url);
                             } else {
-                                window.location.href = './index.html';
+                                window.location.href = './old.html';
                             }
                         } else {
                             // 显示验证码
