fix old page loginOut

--- a/modules/server/src/main/resources/templates/common/userHead.html
+++ b/modules/server/src/main/resources/templates/common/userHead.html
@@ -103,6 +103,11 @@
                             key: "loginOut",
                             value: true
                         });
+                        try {
+                            localStorage.removeItem('Jpom-Token');
+                            localStorage.removeItem('Jpom-Long-Term-Token');
+                        }catch (e) {
+                        }
                         window.location.href = inNode ? "../logout" : "./logout";
                     })
                 }
