节点管理基础调整

--- a/web-vue/src/assets/reset.css
+++ b/web-vue/src/assets/reset.css
@@ -1,6 +1,6 @@
-
 /* 全局样式，重置样式 */
-html, body {
+html,
+body {
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -22,4 +22,9 @@ html, body {
 
 .full-content {
   min-height: 100vh;
+}
+
+.search-input-item {
+  width: 140px;
+  margin-right: 10px;
 }
