add space、delete btn margin、fix index menus def open

--- a/web-vue/src/assets/reset.css
+++ b/web-vue/src/assets/reset.css
@@ -22,13 +22,13 @@ body {
 
 .search-input-item {
   width: 140px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 
 .filter {
   margin-bottom: 10px;
 }
-
+/* 
 .ant-btn {
   margin-right: 10px;
-}
+} */
